--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="font-family: Arial; text-align: center; padding: 40px;">
 
-  <h2>Olá, aqui é Denilson daSCAM MOTO PARTS</h2>
+  <h2>Olá, aqui é Denilson da SCAM Moto Parts</h2>
   <p>Toque no botão abaixo para salvar o meu contato</p>
 
   <a href="Denilson_v1.vcf"
